# concurso-datos-abiertos-colombia-2026

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.override.example.yml  docker-compose.yml  render.yaml  skills-lock.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_health_indicators.py  0002_curated_health_indicator_schema.py  0003_territorial_risk_scores.py  0004_outbreak_alignment.py  0005_transmissible_disease_definitions.py  0006_ingestion_run_metadata.py
backend/data/: divipola_municipality_catalog.json
backend/ml/: evaluate_temporal.py  train_mortality_experiment.py  train_outbreak_experiment.py
backend/ml/artifacts/: promoted-outbreak.json  promoted.json  (+5 more)
backend/scripts/: export_openapi.py  sync_divipola_catalog.py
backend/tests/: conftest.py  test_air_quality_client.py  test_anomaly_and_forecast.py  test_api_endpoints.py  test_colombia_coordinates.py  test_data_drift_and_boundaries.py  test_datos_gov_client.py  test_explainability.py  test_ingestion_normalization.py  test_ingestion_scheduler.py  test_ingestion_years.py  test_insights_generation.py  test_insights_narrative.py  test_municipal_dataset_resolver.py  test_outbreak_prediction.py  test_predict_risk_use_case.py  test_promoted_outbreak_model.py  test_promoted_risk_model.py  test_shared_types.py  test_socrata_client.py  test_sync_ingest.py  test_territorial_risk_scoring.py  test_territorial_validation.py  test_use_cases.py
(+230 files in other folders)
